...
                                                        <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="ZoG-jh-8oM">
                                                            <rect key="frame" x="0.0" y="5.5" width="64.5" height="44"/>
                                                            <accessibility key="accessibilityConfiguration" identifier="Message"/>
                                                            <fontDescription key="fontDescription" type="system" pointSize="12"/>
                                                            <state key="normal" title="message" image="message">
...
                                                        <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="FTW-2s-Qsm">
                                                            <rect key="frame" x="74.5" y="5.5" width="64" height="44"/>
                                                            <accessibility key="accessibilityConfiguration" identifier="Call"/>
                                                            <fontDescription key="fontDescription" type="system" pointSize="12"/>
                                                            <state key="normal" title="call" image="call">
...
                                                        <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="RnB-9I-62h">
                                                            <rect key="frame" x="148.5" y="5.5" width="64.5" height="44"/>
                                                            <accessibility key="accessibilityConfiguration" identifier="Email"/>
                                                            <fontDescription key="fontDescription" type="system" pointSize="12"/>
                                                            <state key="normal" title="email" image="email">
...
                                                        <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="ykn-u3-yaw">
                                                            <rect key="frame" x="223" y="5.5" width="64" height="44"/>
                                                            <accessibility key="accessibilityConfiguration" identifier="Favorite"/>
                                                            <fontDescription key="fontDescription" type="system" pointSize="12"/>
                                                            <state key="normal" title="favorite" image="favorite">
...
                                                    <rect key="frame" x="20" y="-3.5" width="335" height="50.5"/>
                                                    <subviews>
                                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Mobile" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ye7-Au-JqV">
                                                            <rect key="frame" x="0.0" y="0.0" width="80" height="50.5"/>
                                                            <constraints>
...
                                                    <rect key="frame" x="20" y="7" width="335" height="30"/>
                                                    <subviews>
                                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="First Name" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Njf-Gg-V41">
                                                            <rect key="frame" x="0.0" y="0.0" width="80" height="30"/>
                                                            <constraints>
...
                                                    <rect key="frame" x="20" y="7" width="335" height="30"/>
                                                    <subviews>
                                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Last Name" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="XyV-VN-I6b">
                                                            <rect key="frame" x="0.0" y="0.0" width="80" height="30"/>
                                                            <constraints>
...
