...
		}))

		alert.addAction(UIAlertAction(title: "Gallery", style: .default, handler: { _ in
			self.openGallary()
		}))

		alert.addAction(UIAlertAction.init(title: "Cancel", style: .cancel, handler: nil))

		switch UIDevice.current.userInterfaceIdiom {
		case .pad:
			alert.popoverPresentationController?.sourceView = imageView
			alert.popoverPresentationController?.sourceRect = imageView.bounds
			alert.popoverPresentationController?.permittedArrowDirections = .up
...
